// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SDDB should be able to create a fresh record 1`] = `
Object {
  "author": "William Gibson",
  "owner": "konsumer",
  "title": "Neuromancer",
}
`;

exports[`SDDB should be able to update a record 1`] = `
Object {
  "author": "William Gibson",
  "favorite": true,
  "owner": "konsumer",
  "title": "Neuromancer",
}
`;
